2.11.0: upgrade: electron to 22beta5, and window frame seems to be fixed on win11; change: use system window management; change: restore maximize button; fix: weird horizon scrollbar;

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,20 +12,21 @@ input {
 	outline: none;
 	border: 1px solid wheat;
 }
+
 /**
  * disable override
  */
 input[type=search] {
-    -webkit-appearance: none;
+	-webkit-appearance: none;
 }
 
 // @import "bootstrap/scss/bootstrap";
 $primary: rgb(236, 236, 236);
-$primaryDark:rgb(185, 185, 185);
-$primaryDarkDark:rgb(156, 156, 156);
-$secondary:#6c757d;
-$secondaryDark:#636b72;
-$secondaryDarkDark:#5d656d;
+$primaryDark: rgb(185, 185, 185);
+$primaryDarkDark: rgb(156, 156, 156);
+$secondary: #6c757d;
+$secondaryDark: #636b72;
+$secondaryDarkDark: #5d656d;
 $blue: #00c3ff;
 $blueDark: #00ade2;
 $success: #00ff0d;
@@ -391,6 +392,10 @@ html {
 		// overflow-y: scroll;
 		-webkit-app-region: no-drag;
 		flex-grow: 1;
+		/**
+		 * 鬼了,升級到electron22-beta5之後就出現了橫向scrollbar
+		 */
+		overflow-x: hidden;
 
 		.display-area {
 			flex-grow: 1;
